2014-10-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Use SRFI 1 instead of (ice-9 common-list).

	* postgres-table.scm: Don't import ‘(ice-9 common-list)’
	procs; instead, from ‘(srfi srfi-1)’, import ‘find’, ‘filter-map’.
	(pgtable-manager col-defs): Use ‘find’.
	(pgtable-manager drop): Use ‘filter-map’.

2014-10-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Decruft: Don't import ‘(ice-9 common-list) remove-if’.

	Omission from 2008-08-06, "Debogify: Make ‘pgtable-manager’
	INSERTs no longer strip ‘serial’ cols".

	* postgres-table.scm: ...here.

2014-10-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Use hash table to hold column-type objects.

	* postgres-types.scm (*db-col-types*): Delete data structure.
	(ALL): New hash table.
	(dbcoltypes, dbcoltype-lookup, define-db-col-type):
	Don't use alist access procs; instead, use hash access procs.

2014-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[scheme int] Use ‘#:prefix’ instead of ‘#:renamer’.

	* postgres-table.scm: ...here, in ‘define-module’ form.

2014-10-11  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Don't assume ‘(set! (P X) V)’ returns V.

	* postgres-types.scm (oid-type-name-cache fresh!): New proc.
	(oid-type-name-cache): Use it.

2014-01-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't enable GCC warnings in configuration.

	* Makefile.am (AM_CFLAGS): Delete var.

2014-01-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Elide single-use local var.

	* libpq.c (pg_ftype): ...here.

2014-01-27  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq int] Avoid ‘NUM_INT’, ‘C_INT’ for oid, size_t.

	* libpq.c (pg_lo_get_oid): Use ‘NUM_ULONG’.
	(pg_lo_seek): Likewise, and also ‘C_LONG’.
	(pg_lo_import, pg_oid_value, pg_ftype): Use ‘NUM_ULONG’.

2014-01-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[pq slog] Avoid ‘scm_ftell’.

	* libpq.c (lob_seek): New static func forward-decl.
	(pg_lo_tell): Use ‘lob_seek’.

2014-01-25  Thien-Thi Nguyen  <ttn@gnuvola.org>
